--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "blackfireio/blackfire-symfony-meta": "^1.0",
-        "doctrine/dbal": "^3",
+        "doctrine/dbal": "^4.2",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "easycorp/easyadmin-bundle": "4.x-dev",
+        "gedmo/doctrine-extensions": "^3.18",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
