--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@symfony/stimulus-bundle": "^2.23.0"
+        "@hotwired/stimulus": "^3.2.2"
     }
 }
