--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,13 @@
+landing_page:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateAction
+    defaults:
+        template: 'landing.html.twig'
+features:
+    path: /features
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateAction
+    defaults:
+        template: 'recipe_features.html.twig'	
 controllers:
     resource:
         path: ../src/Controller/
