--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "easycorp/easyadmin-bundle": "4.x-dev",
+        "friendsofsymfony/ckeditor-bundle": "^2.6",
         "gedmo/doctrine-extensions": "^3.18",
+        "league/html-to-markdown": "^5.1",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
@@ -47,6 +49,7 @@
         "symfony/yaml": "6.4.*",
         "symfonycorp/platformsh-meta": "^1.0",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/markdown-extra": "^3.20",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
@@ -79,7 +82,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "ckeditor:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
