--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "bootstrap": "^5.3.3",
         "bs-custom-file-input": "^1.3.4",
         "core-js": "^3.38.0",
+        "file-loader": "^6.2.0",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.85.1",
         "sass-loader": "^16.0.5",
@@ -26,6 +27,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@hotwired/stimulus": "^3.2.2"
+        "@hotwired/stimulus": "^3.2.2",
+        "ckeditor4": "^4.25.1"
     }
 }
