Multi-form recipe builder, styling needed

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=9a79f0bb0377c9c3e419920f8e0ba2fb
 ###< symfony/framework-bundle ###
 
