--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/html-to-markdown": "^5.1",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
+        "seld/jsonlint": "^1.11",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/doctrine-messenger": "6.4.*",
