--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,5 +36,8 @@ services:
     App\Adapter\OCRAdapter:
         tags: ['recipe.adapter']
 
+    App\Twig\AppExtension:
+        tags: ['twig.extension']
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
