--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,7 +35,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+	- { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+	- { path: ^/, roles: ROLE_ADMIN }
 
 when@test:
     security:
