--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,10 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/blog, roles: ROLE_ADMIN }
+        - { path: ^/hire, roles: ROLE_ADMIN }
+        - { path: ^/me, roles: ROLE_ADMIN }
+        - { path: ^/work, roles: ROLE_ADMIN }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/$, roles: PUBLIC_ACCESS }
 
