fr-PRF-1: bones of Katzen Profiler engine, wonky tenant isolation with subdomain routing and schema migrations

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,15 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\EventListener\TenantSchemaListener:    
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 100 }
+
+    App\Middleware\TenantSchemaMiddleware:
+        arguments:
+            $siteContext: '@App\Service\SiteContext'
+            $enabled: false
+
     App\Service\RecipeImportService:
         arguments:
             $adapters: !tagged_iterator recipe.adapter
