fix-PRF-1: scope PageController routing

--- a/config/routes/tenant_routes.yaml
+++ b/config/routes/tenant_routes.yaml
@@ -1,9 +1,7 @@
 tenant_pages:
-    host: "{siteDomain}.localhost"
-    path: /{slug}    
+    path: /p/{slug}    
     controller: App\Controller\Tenant\PageController::show
     requirements:
-        siteDomain: "[a-z0-9]+"
         slug: "[a-z0-9]+"
     defaults:
-        siteDomain: null
+        slug: ""
