config-1: update Platform.sh routing to accept subdomain requests

--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -3,3 +3,5 @@
     upstream: "app:http"
 "https://{all}/": { type: upstream, upstream: "app:http" }
 "http://{all}/": { type: redirect, to: "https://{all}/" }
+"https://*.{all}/": { type: upstream, upstream: "app:http" }
+"http://*.{all}/": { type: redirect, to: "https://{all}/" }
