--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -3,5 +3,5 @@
     upstream: "app:http"
 "https://{all}/": { type: upstream, upstream: "app:http" }
 "http://{all}/": { type: redirect, to: "https://{all}/" }
-"https://*.{all}/": { type: upstream, upstream: "app:http" }
-"http://*.{all}/": { type: redirect, to: "https://{all}/" }
+"https://inseam.{all}/": { type: upstream, upstream: "app:http" }
+"http://inseam.{all}/": { type: redirect, to: "https://{all}/" }
