--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -36,7 +36,7 @@ web:
 
 mounts:
     "/var/cache": { source: local, source_path: var/cache }
-    
+    "public/uploads": { source: local }
 
 relationships:
     database: "database:postgresql"
