config: domain routing

--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -1,6 +1,9 @@
 "https://gregishere.com/":
     type: upstream
     upstream: "app:http"
+"https://gregsuehr.com/":
+    type: upstream
+    upstream: "app:http"    
 "https://{all}/": { type: upstream, upstream: "app:http" }
 "http://{all}/": { type: redirect, to: "https://{all}/" }
 "https://inseam.{all}/": { type: upstream, upstream: "app:http" }
