--- a/php.ini
+++ b/php.ini
@@ -2,6 +2,8 @@ allow_url_include=off
 display_errors=off
 display_startup_errors=off
 max_execution_time=30
+session.cookie_lifetime=864000
+session.gc_maxlifetime=864000
 session.gc_probability=0
 session.use_strict_mode=On
 realpath_cache_ttl=3600
