--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "@hotwired/stimulus": "^3.2.2",
         "@pixi/filter-glitch": "^5.1.1",
+        "bootstrap-icons": "^1.13.1",
         "ckeditor4": "^4.25.1",
         "gsap": "^3.13.0",
         "howler": "^2.2.4",
