InventoryService: strict stock consumption

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -28,3 +28,4 @@ framework:
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
             'App\Profile\Message\ProvisionSiteSchema': async
+            'App\Katzen\Messenger\Message\AsyncTaskMessage': async
