--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -40,6 +40,9 @@ when@test:
         dbal:
             # "TEST_TOKEN" is typically set by ParaTest
             dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+            url: '%env(resolve:DATABASE_URL)%'
+        orm:
+          auto_generate_proxy_classes: true
 
 when@prod:
     doctrine:
