--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
         "phpunit/phpunit": "^9.6",
         "psr/log": "^3.0",
         "symfony/browser-kit": "6.4.*",
