--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true  # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+          $projectDir: '%kernel.project_dir%'
 
     ########################################################################
     # auto-registration fallback
