Upsun route config for getkatzen.com

--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -4,6 +4,9 @@
 "https://gregsuehr.com/":
     type: upstream
     upstream: "app:http"
+"https://www.getkatzen.com/":
+    type: upstream
+    upstream: "app:http"
 
 "https://www.mulvaylitmas.com/":
   type: redirect
