--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *~
 *.backup
 data/*
+documentation/attribution/*
 documentation/instructions/*
 scripts/*
 assets/images/*
-public/images/*
 *DS_Store
 
 ###> symfony/framework-bundle ###
