--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production"
     },
     "dependencies": {
         "@hotwired/stimulus": "^3.2.2",
