--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,13 +17,11 @@ security:
             lazy: true
             provider: app_user_provider
             form_login:
-                login_path: app_login
-                check_path: app_login
+                login_path: katzen_login
+                check_path: katzen_login
                 enable_csrf: true
             logout:
-                path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+                path: katzen_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
