--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,5 +1,6 @@
 parameters:
     katzen_hosts: 'getkatzen.com|getkatzen.local'
+    katzen_match: '#^(getkatzen\.com|getkatzen\.local)$#'
     gregishere_hosts: 'gregishere.com|gregishere.local'
     gregsuehr_hosts: 'gregsuehr.com|gregsuehr.local'
     litmas_hosts: 'mulvaylitmas.com|mulvaylitmas.local'
