Sticks and stones may break, but these are the bones of a Katzen Import framework

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ documentation/attribution/*
 documentation/generated/*
 documentation/instructions/*
 scripts/*
+src/var/*
 assets/images/*
 *DS_Store
 
